--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
     <title>Test for GITHUB MINI COURSE</title>
 </head>
 <body>
+    <img src="2.png"/>
     <h2>Welocome to myWebsite</h2>
 </body>
